--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,6 @@ target/
 # IPython
 profile_default/
 ipython_config.py
-*.ipynb
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
@@ -176,7 +175,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
