Adds full documentation for any-guardrail, contributes to #27. Creates documentation for guardrail models from their doc strings to make it transparent to users what kwargs they may need for specific guardrails to invoke them with the GuardrailFactory. Moreover, adds quickstart documentation as well to help users get started on using any-guardrail.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,10 @@ repo_name: any-guardrail
 
 nav:
   - Intro: index.md
+  - Quick Start: quick-start.md
+  - API Reference:
+      - Guardrails: api/guardrails.md
+      - Guardrail Factory: api/guardrail_facotry.md
 theme:
   name: material
   font:
