Added Full Documentation (#28)
* Created initial ReadME for any-guardrail. The ReadME provides installation instructions, as well as basic and advanced usage. The advanced usage instructions show a user the requirements for building a new  class, as well as how to update the model registry. Contributes to #27

* Adds full documentation for any-guardrail, contributes to #27. Creates documentation for guardrail models from their doc strings to make it transparent to users what kwargs they may need for specific guardrails to invoke them with the GuardrailFactory. Moreover, adds quickstart documentation as well to help users get started on using any-guardrail.

* Changed doc strings to get docs to render correctly. When rendering the docs, the args for some guardrails weren't rendering correctly. Moreover, we wanted hyperlinks to be clickable. Fixes #27.

* Reworded one of the docs.

* pre-commmit fixes.

* Fixed a stray - in a name that was preventing quick start file from getting read.

* Fixed njbrake comments on PR. Moves HuggingFace Hub information to Troubleshooting and creates CONTRIBUTING.md. Edits a few nits here and there as well.

* Forgot to run pre-commit

* Missed a place where I needed to edit the file name to guardrail_factory.md

---------

Co-authored-by: Nathan Brake <nathan@mozilla.ai>
Co-authored-by: dni138 <Daniel Nissani>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,10 @@ repo_name: any-guardrail
 
 nav:
   - Intro: index.md
+  - Quick Start: quickstart.md
+  - API Reference:
+      - Guardrails: api/guardrails.md
+      - Guardrail Factory: api/guardrail_factory.md
 theme:
   name: material
   font:
