refactor: Rename high level API.
Before:

```python
from any_guardrail import GuardrailFactory, ClassificationOutput
supported_guardrails = GuardrailFactory.list_all_supported_guardrails() # This will out a list of all guardrail identifiers
guardrail = GuardrailFactory.create_guardrail(support_guardrails[0])  # will create Deepset's deberta prompt injection defense model
result: ClassificationOutput = guardrail.safety_review("All smiles from me!")
assert result.unsafe == False
```

After:

```python
from any_guardrail import AnyGuardrail, GuardrailOutput
guardrail = AnyGuardrail.create(AnyGuardrail.supported_guardrails[0])  # will create Deepset's deberta prompt injection defense model
result: GuardrailOutput = guardrail.validate("All smiles from me!")
assert result.unsafe == False
```

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
   - Quick Start: quickstart.md
   - API Reference:
       - Guardrails: api/guardrails.md
-      - Guardrail Factory: api/guardrail_factory.md
+      - AnyGuardrail: api/api.md
 theme:
   name: material
   font:
