--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = {text = "Apache-2.0"}
 requires-python = ">=3.11"
 dynamic = ["version"]
 dependencies = [
+  "any-llm-sdk>=0.11.0,<1",
   "pydantic",
   "openai",
   "rich",
