--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -38,10 +38,4 @@ jobs:
           uv sync --group tests
 
       - name: Run Documentation tests
-        run: pytest tests/docs -v --cov --cov-report=xml
-
-      - name: Upload coverage reports to Codecov
-        if: always()
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+        run: pytest tests/docs -v
