--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
           - Harm Guard: api/guardrails/harm_guard.md
           - InjecGuard: api/guardrails/injec_guard.md
           - Jasper: api/guardrails/jasper.md
+          - OffTopic: api/guardrails/off_topic.md
           - Pangolin: api/guardrails/pangolin.md
           - ProtectAI: api/guardrails/protectai.md
           - Sentinel: api/guardrails/sentinel.md
