--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,22 @@ requires-python = ">=3.11"
 dynamic = ["version"]
 dependencies = [
   "any-llm-sdk>=0.11.0,<1",
-  "pydantic",
-  "openai",
-  "rich",
-  "httpx",
-  "transformers>=4.53.2",
-  "torch>=2.7.1",
-  "flow-judge[hf]>=0.1.2",
-  "huggingface-hub>=0.33.4",
-  "safetensors>=0.5.3",
+  "pydantic"
 ]
 
 [project.optional-dependencies]
-all = []
-testing = [
-    "jupyterlab>=4.4.5",
+all = [
+  "any-guardrail[flowjudge,huggingface]"
+]
+
+flowjudge = [
+  "flow-judge[hf]>=0.1.2"
+]
+
+huggingface = [
+  "huggingface-hub>=0.33.4",
+  "transformers>=4.53.2",
+  "torch>=2.7.1"
 ]
 
 [project.urls]
