--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,7 +22,7 @@ jobs:
           activate-environment: true
 
       - name: Install pre-commit
-        run: uv sync --group lint
+        run: uv sync --group lint --extra all
 
       - uses: actions/cache@v4
         with:
