--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,13 +95,14 @@ strict = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 follow_untyped_imports = true
+exclude = "scripts"
 
 [[tool.mypy.overrides]]
 module = "tests.*"
 disallow_untyped_decorators = false # mypy gets confused by pytest decorators
 
 [[tool.mypy.overrides]]
-module = ["pytest", "mktestdocs", "pytest_lazy_fixtures", "syrupy.assertion"]
+module = ["pytest", "mktestdocs", "pytest_lazy_fixtures"]
 ignore_missing_imports = true # pytest related modules are not found
 
 [tool.pytest.ini_options]
@@ -125,6 +126,7 @@ docs = [
 lint = [
   "pre-commit==4.3.0",
   "pre-commit-uv==4.1.4",
+  "mypy",
 ]
 
 tests = [
