--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,6 +119,7 @@ docs = [
   "mkdocs-material",
   "mkdocstrings-python",
   "mkdocs-include-markdown-plugin>=7.1.5",
+  "mkdocs-jupyter>=0.25.1",
 ]
 
 
