--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ extend-select = ["ALL"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["D"]
-"scripts/**" = ["T201"]
+"docs/cookbook/**" = ["T201"]
 
 [tool.mypy]
 strict = true
