Forgot to add azure-content-safety to all extra

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 
 [project.optional-dependencies]
 all = [
-  "any-guardrail[flowjudge,huggingface]"
+  "any-guardrail[flowjudge,huggingface, azure-content-safety]"
 ]
 
 flowjudge = [
