--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 
 [project.optional-dependencies]
 all = [
-  "any-guardrail[flowjudge,huggingface]"
+  "any-guardrail[flowjudge,huggingface, azure-content-safety]"
 ]
 
 flowjudge = [
@@ -27,6 +27,11 @@ huggingface = [
   "transformers>=4.53.2",
   "torch>=2.7.1",
   "hf-xet>=1.1.5"
+]
+
+azure-content-safety = [
+    "azure-ai-contentsafety>=1.0.0",
+    "pathvalidate>=3.3.1",
 ]
 
 [project.urls]
@@ -79,7 +84,6 @@ ignore = [
   "C901",
   "ERA001",
   "SLF001",
-  "PD901",
   "PLC0415", # We use lazy imports in several places
   "PLR0912",
   "PLR0913",
