--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,12 +24,12 @@ jobs:
       - name: Install pre-commit
         run: uv sync --group lint --extra all
 
-      - uses: actions/cache@v5
-        with:
-          path: .mypy_cache
-          key: ${{ runner.os }}-mypy-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-mypy-
+      #- uses: actions/cache@v5
+      #  with:
+      #    path: .mypy_cache
+      #    key: ${{ runner.os }}-mypy-${{ hashFiles('pyproject.toml') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-mypy-
 
       - name: pre-commit
         run: uv run pre-commit run --all-files --verbose
