--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
       - Customer Service Policy Guardrail: cookbook/customer_service_policy_guardrail.ipynb
   - API Reference:
       - Guardrails:
+          - Alinia: api/guardrails/alinia.md
           - AnyLLM: api/guardrails/any_llm.md
           - Azure Content Safety: api/guardrails/azure_content_safety.md
           - Deepset: api/guardrails/deepset.md
