Forgot to add the HF TOKEN to the yaml

--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -30,4 +30,5 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           CONTENT_SAFETY_KEY: ${{ secrets.CONTENT_SAFETY_KEY }}
           CONTENT_SAFETY_ENDPOINT: ${{ secrets.CONTENT_SAFETY_ENDPOINT }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: pytest -v tests/integration -n auto
