Helps with retrying the download of models to make sure the tests work every time.

--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -25,10 +25,18 @@ jobs:
         run: |
           uv sync --group tests --extra all
 
+      - name: Cache HuggingFace models
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/huggingface
+          key: huggingface-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            huggingface-${{ runner.os }}-
+
       - name: Run Integration tests (parallel with xdist)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           CONTENT_SAFETY_KEY: ${{ secrets.CONTENT_SAFETY_KEY }}
           CONTENT_SAFETY_ENDPOINT: ${{ secrets.CONTENT_SAFETY_ENDPOINT }}
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: pytest -v tests/integration -n auto
+        run: pytest -v tests/integration -n auto --reruns 3 --reruns-delay 10
