Adding Alinia Guardrails (#134)
* Created new generic typing to allow for dynamic typing for each guardrail, updated all typing for each guardrail, and made sure all tests still pass. This also takes care of a lot of mypy issues.

* Adjusting typing so we are backward compatible with more python versions

* Redid the typing for GuardrailOutput in a way that was compatible with mypy and backward compatible to python 3.11 and 3.12.

* Linting

* Testing mypy

* Linting shananigans

* Updated documentation with Alinia Guardrails.

* Addition of Alinia guardrails in any-guardrail.

* Fixing up tests.

* Linter woke up from its nap and was mad, so had to lull it back to sleep.

* Fixing lints on cookbook from main.

* Resolved 500 error issues.

* Added an integration test.

* Linting.

* Forgot to add to our config for integration tests.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
       - Custom Blocklists with Azure Content Safety : cookbook/azure_blocklist_slang_filter.ipynb
   - API Reference:
       - Guardrails:
+          - Alinia: api/guardrails/alinia.md
           - AnyLLM: api/guardrails/any_llm.md
           - Azure Content Safety: api/guardrails/azure_content_safety.md
           - Deepset: api/guardrails/deepset.md
